dataset1235/2025-2/1153765216/users/896391410/executions/2747719322_2819779400.log
== SUBMISSION (2025-08-19 19:31:36)
-- CODE: 
quantidde_jogo = int (input())
valor_unitario = float(input())
valor_frete = float(input())

tootal = (quantidade_jogo  * valor_unitario) + valor_frete

print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tootal = (quantidade_jogo  * valor_unitario) + valor_frete
              ^^^^^^^^^^^^^^^
NameError: name 'quantidade_jogo' is not defined. Did you mean: 'quantidde_jogo'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tootal = (quantidade_jogo  * valor_unitario) + valor_frete
              ^^^^^^^^^^^^^^^
NameError: name 'quantidade_jogo' is not defined. Did you mean: 'quantidde_jogo'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tootal = (quantidade_jogo  * valor_unitario) + valor_frete
              ^^^^^^^^^^^^^^^
NameError: name 'quantidade_jogo' is not defined. Did you mean: 'quantidde_jogo'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tootal = (quantidade_jogo  * valor_unitario) + valor_frete
              ^^^^^^^^^^^^^^^
NameError: name 'quantidade_jogo' is not defined. Did you mean: 'quantidde_jogo'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tootal = (quantidade_jogo  * valor_unitario) + valor_frete
              ^^^^^^^^^^^^^^^
NameError: name 'quantidade_jogo' is not defined. Did you mean: 'quantidde_jogo'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tootal = (quantidade_jogo  * valor_unitario) + valor_frete
              ^^^^^^^^^^^^^^^
NameError: name 'quantidade_jogo' is not defined. Did you mean: 'quantidde_jogo'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 19:32:14)
-- CODE: 
quantidade_jogo = int (input())
valor_unitario = float(input())
valor_frete = float(input())

tootal = (quantidade_jogo  * valor_unitario) + valor_frete

print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(total)
          ^^^^^
NameError: name 'total' is not defined. Did you mean: 'tootal'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(total)
          ^^^^^
NameError: name 'total' is not defined. Did you mean: 'tootal'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(total)
          ^^^^^
NameError: name 'total' is not defined. Did you mean: 'tootal'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(total)
          ^^^^^
NameError: name 'total' is not defined. Did you mean: 'tootal'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(total)
          ^^^^^
NameError: name 'total' is not defined. Did you mean: 'tootal'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(total)
          ^^^^^
NameError: name 'total' is not defined. Did you mean: 'tootal'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 19:31:49)
-- CODE: 
quantide_jogo = int (input())
valor_unitario = float(input())
valor_frete = float(input())

tootal = (quantidade_jogo  * valor_unitario) + valor_frete

print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tootal = (quantidade_jogo  * valor_unitario) + valor_frete
              ^^^^^^^^^^^^^^^
NameError: name 'quantidade_jogo' is not defined. Did you mean: 'quantide_jogo'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tootal = (quantidade_jogo  * valor_unitario) + valor_frete
              ^^^^^^^^^^^^^^^
NameError: name 'quantidade_jogo' is not defined. Did you mean: 'quantide_jogo'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tootal = (quantidade_jogo  * valor_unitario) + valor_frete
              ^^^^^^^^^^^^^^^
NameError: name 'quantidade_jogo' is not defined. Did you mean: 'quantide_jogo'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tootal = (quantidade_jogo  * valor_unitario) + valor_frete
              ^^^^^^^^^^^^^^^
NameError: name 'quantidade_jogo' is not defined. Did you mean: 'quantide_jogo'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tootal = (quantidade_jogo  * valor_unitario) + valor_frete
              ^^^^^^^^^^^^^^^
NameError: name 'quantidade_jogo' is not defined. Did you mean: 'quantide_jogo'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tootal = (quantidade_jogo  * valor_unitario) + valor_frete
              ^^^^^^^^^^^^^^^
NameError: name 'quantidade_jogo' is not defined. Did you mean: 'quantide_jogo'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 19:31:34)
-- CODE: 
quantidde_jogo = int (input())
valor_unitario = float(input())
valor_frete = float(input())

tootal = (quantidade_jogo  * valor_unitario) + valor_frete

print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tootal = (quantidade_jogo  * valor_unitario) + valor_frete
              ^^^^^^^^^^^^^^^
NameError: name 'quantidade_jogo' is not defined. Did you mean: 'quantidde_jogo'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tootal = (quantidade_jogo  * valor_unitario) + valor_frete
              ^^^^^^^^^^^^^^^
NameError: name 'quantidade_jogo' is not defined. Did you mean: 'quantidde_jogo'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tootal = (quantidade_jogo  * valor_unitario) + valor_frete
              ^^^^^^^^^^^^^^^
NameError: name 'quantidade_jogo' is not defined. Did you mean: 'quantidde_jogo'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tootal = (quantidade_jogo  * valor_unitario) + valor_frete
              ^^^^^^^^^^^^^^^
NameError: name 'quantidade_jogo' is not defined. Did you mean: 'quantidde_jogo'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tootal = (quantidade_jogo  * valor_unitario) + valor_frete
              ^^^^^^^^^^^^^^^
NameError: name 'quantidade_jogo' is not defined. Did you mean: 'quantidde_jogo'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    tootal = (quantidade_jogo  * valor_unitario) + valor_frete
              ^^^^^^^^^^^^^^^
NameError: name 'quantidade_jogo' is not defined. Did you mean: 'quantidde_jogo'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 19:32:38)
-- CODE: 
quantidade_jogo = int (input())
valor_unitario = float(input())
valor_frete = float(input())

total = (quantidade_jogo  * valor_unitario) + valor_frete

print(total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
1642.5
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
540.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
162.56
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
